prepare release notes for eb400

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,6 +3,87 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at https://easybuild.readthedocs.io/en/latest/Release_notes.html.
 
+v4.0.0 (September 20th 2019)
+----------------------------
+
+feature release
+
+- various other small enhancements, including:
+  - use requests instead of urllib2 for 403 errors (#2695)
+  - make REST client actually return headers when http method is HEAD (#2763)
+  - put fake 'vsc' namespace in place that produces an error on import (#2790)
+  - use pip requirements file in Travis (#2874)
+  - add support for --fix-deprecated-easyconfigs (#2881)
+  - add -L$EBROOTIMKL/lib/intel64 to LDFLAGS for MKL (#2930)
+  - also consider 'python3' in 'eb' script (#2932)
+  - warn if non-single-letter local variables not named 'local_*' or '_*' are used + enhance --fix-deprecated-easyconfigs to rename them (#2938)
+  - replace --strict-local-var-naming with the more flexible --local-var-naming-check={error,log,warn} (#2968)
+  - handle dict-type checksums in `check_checksums_for` (#2974)
+  - include docs URL in warning/error about non-conforming names of local variables (#2984)
+- various bug fixes, including:
+  - only import from pkg_resources (provided by setuptools) to check GC3Pie version (#2837)
+  - setup.py: Update the PyPI trove classifiers (#2875)
+  - make --fix-deprecated-easyconfigs a bit less strict (#2898)
+  - enhance/fix to_template_str function to do a better job at using template values in dumped easyconfigs (#2948)
+  - Fixing a bug in which filtered dependencies based on complex filtering (#2983)
+  - fix broken --from-pr tests (#2985)
+  - fix running framework suite from easybuild-framework directory (#2986)
+  - fix verbose output for 'eb' command, need to use "$@" to ensure arguments are shown correctly (#2992)
+  - install fake 'vsc' namespace *before* parsing EasyBuild configuration (#2993)
+  - define mapping for iccifort->intel for iccifort compiler-only for HMNS (#2996)
+  - also consider concatenation of compiler module names to determine details of toolchain compiler component (#2997)
+  - add back --add-dummy-to-minimal-toolchains as deprecated option (#3001)
+  - add modluafooter & modtclfooter at the end of the generated module file (#3003)
+  - fixes required to avoid breaking Cray support (#3008)
+- fix compatibility with Python 3:
+  - ingest vsc-base & vsc-install (#2708)
+  - move mk_rst_table function from easybuild.tools.docs to easybuild.tools.utilities (#2713)
+  - start testing with Python 3.6, add easybuild.tools.py2vs3 module, fix import for easybuild.base.* modules (#2714)
+  - fix import with Python 3 for easybuild.tools.* modules and easybuild.main (#2719)
+  - consistently use 'string_type' from easybuild.tools.py2vs3 rather than 'basestring' (#2721)
+  - fix running of set_up_configuration() in Python 3 (#2723)
+  - make filetools tests pass with Python 3 (#2729)
+  - make tests for easybuild.tools.modules pass with Python 3 (#2743)
+  - fix syntax errors when importing test modules with Python 3 (#2744)
+  - fix variety of small issues to improve Python 3 compatibility (#2751)
+  - fix running of build_log/config/containers/docs tests with Python 3 (#2756)
+  - fix running systemtools test subsuite with Python 3 by using integer divsion in get_total_memory() function (#2759)
+  - fix running of github tests with Python 3 (#2761)
+  - fix running of toolchain tests with Python 3 (#2762)
+  - fix running of 'asyncprocess' & 'run' test suite with Python 3 (#2765)
+  - fix running of 'easyconfig' test suite with Python 3 (#2766)
+  - fix running of 'module_generator' test suite with Python 3 (#2767)
+  - fix running of 'robot' test suite with Python 3 (#2768)
+  - test all configuration with Python 3.6 (#2774)
+  - fix running of 'easyblock' test suite with Python 3 (#2775)
+  - fix running of 'easyconfigparser' and 'format_convert' test suites with Python 3 (#2778)
+  - fix running of 'options' test suite with Python 3 (#2780)
+  - fix running of 'toy_build' test suite with Python 3 (#2785)
+  - fix running 'scripts' test subsuite with Python 3 (#2787)
+  - fix last failing tests on top of Python 3 + run full test suite with Python 3 (#2789)
+  - fix UnicodeDecodeError on command output using 'replace' mode in run_cmd & run_cmd_qa (#2791)
+  - avoid TypeError when checking gompi/iccifort/iimpi/intel versions for deprecation (#2792)
+  - take into account possible 'system' version when checking toolchain versions for deprecation (#2794)
+  - fix test_import_available_modules on top of Python 3.7 by making sure sys.path has an empty entry (#2800)
+  - fix UnicodeEncodeError raised from run_cmd with Python 2.7 (#2801)
+  - fix broken tests with Python 3.x + also test with Python 3.5 (#2805)
+  - ensure correct value type in data field of Request object in Python 2/3 (#2806)
+  - fix parsing of easyconfig file that uses local variable in list comprehension when using Python 3.x (#2895)
+  - make check for deprecated foss versions compatible with Python 3 (#2982)
+- other changes:
+  - add check to ensure that --robot argument specifies an existing directory (#2086)
+  - drop requirement for setuptools as runtime dependency (#2836)
+  - deprecate 'dummy' toolchain, replace with 'system' toolchain (#2877)
+  - remove old scripts that are no longer useful (+ minor fixes to others) (#2897)
+  - reverse lists for LDFLAGS and CPPFLAGS (#2931)
+  - use 'command -v' to avoid requiring 'which' in 'eb' command (#2979)
+  - stop trying to use setuptools.setup in setup.py, always use distutils.core.setup instead (#2988)
+  - allow that icc & ifort are not actual dependencies in iccifort toolchain module (#2995)
+  - make installation independent of module naming scheme by default (#2999)
+  - print warning when 'eb' command is not found in $PATH and for empty robot search path (#3006)
+  - change order of 'python*' commands considered by 'eb' command: python, python3, python2 (#3007)
+
+
 v3.9.4 (August 23rd 2019)
 -------------------------
 
