minor tweaks to easyBuild-framework v4.1.0 release notes

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -9,23 +9,24 @@ v4.1.0 (December 3rd 2019)
 update/bugfix release
 
 - various enhancements, including:
-  - add support for specifying different dependency version based on architecture (#3047)
-  - don't call out to prohibitively expensive getRootLoggerName in getLogger, just use 'root' instead (#3074)
+  - performance improvements:
+    - skip validation when copying EasyConfig object for extension (#3071)
+    - correctly specify that ActiveMNS & co are singleton classes when using Python 3 (#3073)
+    - don't call out to prohibitively expensive getRootLoggerName in getLogger, just use 'root' instead (#3074)
+    - fix inconsistent module path usage that leads to repeated reloading in HMNS (#3099)
+  - add support for specifying different dependency version based on processor architecture (#3047)
   - support use of glob patterns for paths to files with external modules metadata (#3075)
   - take into account that external modules may not be visible directly (due to module hierarchy) (#3083)
-  - adds support for including 'extensions' statement in Lua modules with Lmod 8.2+ (#3085)
+  - add support for including 'extensions' statement in Lua modules with Lmod 8.2.8+ (#3085, #3107, #3110)
   - add support for --sync-pr-with-develop (#3087)
   - add support for --new-branch-github, --new-pr-from-branch, --sync-branch-with-develop, --update-branch-github (#3103)
   - fix typo in docstring for new_branch_github (#3106)
-  - make including 'extensions' statement in generated Lua module files opt-in for now (#3107)
 - various bug fixes, including:
   - correctly handle iccifortcuda toolchain with standalone iccifort in det_toolchain_compilers (#3055)
   - init git repo with git.repo.clone() instead of copy_dir() (#3062)
   - fix regular expression so depends-on statements are recognized correctly in Tcl module files (#3065)
-  - update GitPython to latest version that supports Python 2.6 to fix broken test_new_update_pr (#3066)
+  - update GitPython to latest version that supports Python 2.6 in requirements.txt to fix broken test_new_update_pr (#3066)
   - imply --disable-pre-create-installdir with --inject-checksums (#3069)
-  - skip validation when copying EasyConfig object for extension (#3071)
-  - correctly specify that ActiveMNS & co are singleton classes (#3073)
   - handle patches in extensions more like normal patches (#3067)
   - take into account that platform.linux_distribution and platform.dist was removed in Python 3.8 (#3078)
   - always include mandatory easyconfig parameters in dumped easyconfig (#3081)
@@ -36,7 +37,6 @@ update/bugfix release
   - fix various issues in extracting comments from original easyconfig file and including them again in dumped easyconfig (#3095)
   - don't use %(version)s template in exts_default_options in dumped easyconfig (#3096)
   - fix generated module statements in case only a single version is listed in multi_deps (#3097)
-  - fix inconsistent module path usage that leads to repeated reloading in HMNS (#3099)
   - fix broken test_show_system_info on macOS due to 'Python' binary (#3105)
 - other changes:
   - deprecate running EasyBuild with Python 2.6 via new check_python_version() function (#3076)
