--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,6 +3,39 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at https://easybuild.readthedocs.io/en/latest/Release_notes.html.
 
+v4.1.1 (January 16th 2020)
+--------------------------
+
+update/bugfix release
+
+- various enhancements, including:
+  - add check_log_for_errors to detect and handle multiple errors (#3118)
+  - implement support for 'eb --show-ec' (#3132)
+  - also update $XDG_DATA_DIR (share/) and $GI_TYPELIB_PATH environment variables (lib*/girepository-*) (#3133)
+  - add support for --copy-ec (#3142)
+  - mention --disable-* option in --help output for boolean options enabled by default (#3151)
+  - add --cuda-compute-capabilities configuration option (#3161)
+- various bug fixes, including:
+  - ignore imports from vsc namespace made from pkgutil.py (#3120)
+  - only actually change permissions using os.chmod in adjust_permissions if the current permissions are not correct already (#3125)
+  - use shutil.copyfile to just copy file contents if target path exists and is owned by someone else (#3127)
+  - fix or avoid warnings that commonly arise in build log (#3129)
+  - disable buffering in asyncprocess.Popen using bufsize=0, to fix run_cmd_qa missing output (#3130)
+  - update pip & install wheel package in generated Singularity container recipes (#3136)
+  - avoid crash in modify_env & unset unset_env_vars when using (older versions) of Python 3.5 & 3.6 by using list(...) (#3140)
+  - get_software_libdir: take into account that lib64 could be a symlink to lib (or vice versa) (#3141)
+  - only parse docstring if it exists (#3144)
+  - only add useful entries for $CPATH, $(LD_)LIBRARY_PATH and $PATH (#3145)
+  - fix --list-software=detailed when using Python 3 by leveraging sort_looseversions function from py2vs3 module (#3146)
+  - ensure subdirectories in software install directory have correct search (exec) permission (#3147)
+  - only remove folders that contain no files recursively (#3152)
+  - take into account that a checksum value may be a tuple of valid checksum in EasyBlock.check_checksums (#3153)
+- other changes:
+  - bump to Lmod 8.2.9 in GitHub CI config (#3115)
+  - update copyright statements for 2020 (#3149)
+  - ignore "Black would make changes" produced by flake8-black (#3162)
+
+
 v4.1.0 (December 4th 2019)
 --------------------------
 
