minor tweak to EasyBuild v4.2.1 release notes

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -10,39 +10,32 @@ update/bugfix release
 
 - various enhancements, including:
   - also mention CPU architecture (x86_64, POWER) in comment for test reports (#3281)
-  - add support for enhancing existing sanity check (#3288)
-  - clean up locks when EasyBuild session is cancelled with signal like SIGTERM (#3291)
-  - added function find_glob_pattern to filetools.py (#3297)
-  - add constants for osdependecies (#3309)
+  - add support for enhancing existing sanity check in easyconfigs, as opposed to overwriting paths/commands (#3288)
+  - clean up locks when EasyBuild session is cancelled with a signal like SIGTERM (#3291, #3321)
+  - add 'find_glob_pattern' function to filetools module (#3297)
+  - add constants for common OS dependencies (OS_PKG_IBVERBS_DEV, OS_PKG_OPENSSL_DEV, ...) (#3309, #3334)
   - flesh out get_mpi_cmd_template function from Mpi.mpi_cmd_for method (#3312)
-  - add variable 'moddependpaths' to resolve dependencies at load time (#3324)
+  - add variable 'moddependpaths' to specify extra $MODULEPATH entry to consider for loading dependency modules (#3324)
   - allow copying of tweaked easyconfigs when using --try-* with --copy-ec (#3332)
-  - add OS_PKG_PAM_DEV constant for osdependencies (#3334)
 - various bug fixes, including:
-  - add sorting to rst output of list_toolchains to match txt and none (#3246)
+  - make ModulesTool.exist more robust w.r.t. module wrappers, aliases, defaults, etc. (#3216, #3337)
+  - clean up rst output of --list-toolchains (#3246)
   - cast CPU arch name provided by archspec to a regular string (#3286)
   - get pr_title and pr_descr built_options in new_pr_from_branch instead of new_pr (and commit_msg in both) (#3298)
-  - strip out 'data-yanked' from HTML page with package source URLs served by PyPI (#3303)
+  - make pypi_source_urls more robust by using HTMLParser rather than xml.etree.ElementTree (#3303, #3329)
   - fix broken test for --include-easyblocks-from-pr (#3304)
   - don't use distutils.dir_util in copy_dir (#3310)
   - print trace message for sanity check command before running it (#3316)
-  - fix problems with CrayCCE processing when there are no actual external modules (#3319)
+  - fix problems with processing of easyconfigs using a Cray* toolchain when there are no actual external modules (#3319)
   - make test_find_eb_script more robust in case $EB_SCRIPT_PATH is already set (#3320)
-  - fix broken test_toy_lock_cleanup_signals & properly clean up after using SIGALRM signal in tests (#3321)
-  - fix a couple of bugs with `tweak.py` for `--try-update-deps` (#3325)
-  - only calculate the mapping of version suffixes if they are actually used (#3326)
+  - fix several small problems wit --try-update-deps (experimental feature) (#3325, #3326, #3330)
   - add --disable-job in 'eb' command used in jobs, to prevent infinite job cycle (#3328)
-  - make pypi_source_urls more robust by using HTMLParser rather than xml.etree.ElementTree (#3329)
-  - check easyconfig itself as well as deps for versionsuffix when using --try-update-deps (#3330)
   - avoid empty entries in $LD_LIBRARY_PATH and other path-like environment variables (#3333)
-  - reinstate fallback to ModulesTool.module_wrapper_exists in ModulesTool.exist (#3337)
 - other changes:
-  - make ModulesTool.exist more robust w.r.t. module wrappers, aliases, defaults, etc. (#3216)
   - fix code style issues in easybuild.tools + add flake8 linting test (#3282)
   - introduce contextmanager for disabling templating and reduce resolving errors (#3287)
   - add 'change_into_dir' named argument to 'extract_file' + print deprecation warning if it's not specified (#3292)
-  - add .mypy_cache to .gitignore (#3313)
-  - improve install_eb_dep.sh (#3314)
+  - improve install_eb_dep.sh script to install EasyBuild dependencies in CI environment (#3314)
 
 
 v4.2.0 (April 14th 2020)
